--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href=""><i class="fa-solid fa-house"></i> Pennington Recreation Club</a>
+        <a class="navbar-brand" href=""><i class="fa-solid fa-house"></i> Recreation Club</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -96,7 +96,7 @@
                   </button></li>
         
                 <li><button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Thursday: 6-7pm">
-                    AA(Alcoholics anonymous) <i class="fa-solid fa-hand-holding-medical"></i>
+                    AA <i class="fa-solid fa-hand-holding-medical"></i>
                   </button>
                 </li>
                 <li><button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Wednesday">
