--- a/index.html
+++ b/index.html
@@ -54,9 +54,6 @@
             <img src="images/hall.jpg" class="d-block w-100" alt="hallpic">
           </div>
           <div class="carousel-item">
-            <img src="images/hall2.jpg" class="d-block w-100" alt="hallpic">
-          </div>
-          <div class="carousel-item">
             <img src="images/hall3.jpg" class="d-block w-100" alt="hallpic">
           </div>
           <div class="carousel-item">
@@ -109,6 +106,9 @@
                   <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Monday and Friday: 7-8:30am and Wednesday: 8-9:30am">
                     Yoga   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp;      <i class="fa-solid fa-dove"></i>
                   </button>
+                  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Tuesday and Friday: 5-6pm">
+                    Just Move &nbsp; &nbsp;  &nbsp;      <i class="fa-solid fa-shoe-prints"></i>
+                  </button>
 
 
               </div>
@@ -145,7 +145,7 @@
         <h2>Rec Club Market</h2>
             <p>First Saturday of every month</p>
             <p>9am - 12pm</p>
-            <p>IN the hall and lovely surrounding indigenous garden</p>
+            <p>Stalls available in the hall or in the lovely shady indigenous garden</p>
             <p>Lots of interesting stalls - foods and crafts</p>
             <p>Supporting local crafts</p>
             <p>Live entertainment by local talent</p>
