--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     Arts & Crafts   <i class="fa-solid fa-paintbrush"></i>
                   </button>
                   <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Thursday: 2-4pm (1st & 3rd week)">
-                    Crotcheting  &nbsp; &nbsp; <i class="fa-solid fa-mitten"></i>
+                    Crocheting  &nbsp; &nbsp; <i class="fa-solid fa-mitten"></i>
                   </button>
                   <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Monday and Friday: 7-8:30am and Wednesday: 8-9:30am">
                     Yoga   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp;      <i class="fa-solid fa-dove"></i>
@@ -177,6 +177,7 @@
         <a href="mailto: reltonhall@yahoo.com"> <i class="social-icon fa-solid fa-envelope"></i></a>
         <a href="https://www.google.com/maps/place/Relton+Hall/@-30.3862526,30.6946059,20.75z/data=!4m15!1m8!3m7!1s0x1ef63a716129c13d:0xdae192a5ae922c10!2sPennington,+4184!3b1!8m2!3d-30.380763!4d30.6918803!16zL20vMDRfMnNi!3m5!1s0x1ef63a8bde4d9461:0xe59729fcdff6a28e!8m2!3d-30.386155!4d30.6945932!16s%2Fg%2F11fyfjsywb"><i class="fa-solid fa-location-dot"></i></a>
         <p>Relton Hall - Pennington Recreation Club</p>
+        <p class="Craig">website made by Craig Helfrich<a class="Craig" href="mailto: Craig.Helfrich.2@gmail.com"><i class="social-icon fa-solid fa-envelope"></i></a></p>
     
       </footer>
 
